<resources>
    <string name="app_name">Photo Editor</string>
    <string name="previous_day">Prev Day</string>
    <string name="next_day">Next Day</string>
    <string name="all_days">All Days</string>
    <string name="settings">Settings</string>
    <string name="languages">Languages</string>
    <string name="information">Information</string>
    <string name="permission_request">Request Permissions To Access</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="details">details</string>
    <string name="flip">flip</string>
    <string name="crop">crop</string>
    <string name="draw">draw</string>
    <string name="color">color</string>



    <string name="information_content">
        Photo Manager\n
        An Android practice project for learning and development.\n\n
        Main Features:\n
        • Browse all local photos on your device\n
        • Filter photos by creation date\n
        • Photo editing\n\n
        Version: 1.0.0\n
        Author: Haonan Zhu\n
        e-mail: a987029855@hotmail.com\n
        GitHub: https://github.com/ZHN239\n
        Development Environment: Android Studio\n\n
        ⚠️ Note: This app is for educational use only. Commercial use is prohibited.
    </string>

</resources>