<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_nav"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_nav_height_56"
        android:background="@color/top_nav_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageButton
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintDimensionRatio="1"
            android:src="@drawable/ic_close"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"/>

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintDimensionRatio="1"
            android:src="@drawable/ic_settings"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/photo_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_nav"
        app:layout_constraintDimensionRatio="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/date_limit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/photo_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/previous_day_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="false"
            android:maxLines="2"
            android:minWidth="60dp"
            android:text="@string/previous_day"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_selector"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/previous_day_btn"
            app:layout_constraintEnd_toStartOf="@id/next_day_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/all_days"
            android:textSize="18sp"
            android:maxLines="1"
            android:gravity="center"
            android:clickable="false" />

        <CheckBox
            android:id="@+id/all_days"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toTopOf="@id/date_selector"
            app:layout_constraintBottom_toBottomOf="@id/date_selector"
            app:layout_constraintEnd_toEndOf="@id/date_selector"
            style="@android:style/Widget.CompoundButton.CheckBox" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_day_btn"
            android:layout_width="wrap_content"
            android:minWidth="60dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next_day"
            android:textSize="18sp"
            android:maxLines="1"
            android:clickable="false" />
        

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/img_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/date_limit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/request_permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_request"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/img_list"
        app:layout_constraintBottom_toBottomOf="@id/img_list"
        app:layout_constraintStart_toStartOf="@id/img_list"
        app:layout_constraintEnd_toEndOf="@id/img_list" />




</androidx.constraintlayout.widget.ConstraintLayout>