<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_nav"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_nav_height_56"
        android:background="@color/top_nav_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageButton
            android:id="@+id/settings_back"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintDimensionRatio="1"
            android:src="@drawable/ic_back"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/settings"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:divider="?attr/dividerHorizontal"
        android:showDividers="middle">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_language"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/ic_language"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_language"
                android:padding="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_language"
                android:text="@string/languages"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/select_language"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_right_arrow"
                android:padding="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_info"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/ic_info"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_info"
                android:padding="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_info"
                android:text="@string/information"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/select_info"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_right_arrow"
                android:padding="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>